--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: cover; /* Ensures video covers the entire screen */
             z-index: -1; /* Place video behind content */
             opacity: 0.2; /* Adjust opacity to ensure readability of content */
         }
@@ -33,7 +33,6 @@
             padding: 20px;
             position: relative; /* Keeps content above the video */
             z-index: 1; /* Ensures content is above the video */
-            background-color: rgba(0, 0, 0, 0.7); /* Slightly darker background to improve text readability */
         }
 
         h1, h2 {
