--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             height: 100%;
             object-fit: cover; /* Ensures video covers the entire screen */
             z-index: -1; /* Place video behind content */
-            opacity: 0.2; /* Adjust opacity to ensure readability of content */
+            opacity: 0.5; /* Slightly increase opacity to make video more visible */
         }
 
         .container {
@@ -33,11 +33,13 @@
             padding: 20px;
             position: relative; /* Keeps content above the video */
             z-index: 1; /* Ensures content is above the video */
+            background-color: rgba(0, 0, 0, 0.3); /* Lighter overlay to improve video visibility */
         }
 
         h1, h2 {
             text-align: center;
-            color: #f0f0f0; /* Light grey for headings */
+            color: #ffffff; /* White for headings */
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8); /* Text shadow for better readability */
         }
 
         .dropdown-container, .comparison-container {
@@ -87,7 +89,7 @@
         }
 
         .paddle {
-            background-color: #4f4f4f; /* Medium grey for paddle background */
+            background-color: rgba(79, 79, 79, 0.7); /* Slightly transparent grey for paddle background */
             color: white;
             padding: 20px;
             border-radius: 10px;
@@ -101,7 +103,8 @@
 
         .paddle h3 {
             text-align: center;
-            color: #f0f0f0; /* Light grey for paddle title */
+            color: #ffffff; /* White for paddle title */
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8); /* Text shadow for better readability */
         }
 
         .paddle p {
@@ -120,7 +123,7 @@
 
         .recommendation-box {
             width: 300px;
-            background-color: #4f4f4f; /* Medium grey for recommendation box */
+            background-color: rgba(79, 79, 79, 0.7); /* Slightly transparent grey for recommendation box */
             color: white;
             padding: 15px;
             border-radius: 10px;
@@ -137,7 +140,8 @@
 
         .recommendation-box h3 {
             margin-bottom: 10px;
-            color: #f0f0f0; /* Light grey for recommendation title */
+            color: #ffffff; /* White for recommendation title */
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8); /* Text shadow for better readability */
         }
 
         .recommendation-box p {
