--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             padding: 20px;
             position: relative; /* Keeps content above the video */
             z-index: 1; /* Ensures content is above the video */
+            background-color: rgba(0, 0, 0, 0.15); /* Lighter overlay to improve video visibility */
         }
 
         h1, h2 {
